import Foundation

extension TimeZone {
  static let conference = TimeZone(identifier: "Europe/Brussels")!
}
