...
}

extension RootViewController: RootViewControllable {
  func addAgenda(_ agendaViewControllable: ViewControllable) {
    agendaViewController = agendaViewControllable.uiviewController
    agendaViewController?.title = L10n.Agenda.title
    agendaViewController?.tabBarItem.accessibilityIdentifier = "agenda"
    agendaViewController?.tabBarItem.image = .fos_systemImage(withName: "calendar")
  }

  func addMap(_ mapViewControllable: ViewControllable) {
    mapViewController = mapViewControllable.uiviewController
    mapViewController?.title = L10n.Map.title
...
