...
  var showsLiveIndicator: Bool {
    get {
      imageView?.image == .liveIndicator
    }
    set {
      imageView?.image = newValue ? .liveIndicator : nil
      imageView?.accessibilityIdentifier = newValue ? "live" : nil
    }
  }
}

private extension UIImage {
  static let liveIndicator: UIImage = {
...
