...
    }
  }

  var accessibilityIdentifier: String {
    switch self {
    case .beginning:
      return "play"
    case .end:
      return "replay"
    case .at:
      return "resume"
    }
  }
}

