...
      "transportation"
    case .bus:
      "bus-tram"
    case .train:
      "train"
    case .car:
      "car"
    case .plane:
      "plane"
    case .taxi:
      "taxi"
    case .legal:
      "legal"
...
