import UIKit

enum TransportationItem: String {
  case appleMaps, googleMaps
  case bus, shuttle, train, car, plane, taxi
}

enum TransportationSection: CaseIterable {
  case directions, by
}
...
