...

// Title for the welcome screen of the app
"welcome.title" = "FOSDEM %@";
// A short message describing what FOSDEM - the event - is
"welcome.message" = "FOSDEM is a free event for software developers to meet, share ideas and collaborate.\n\nEvery year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.";
// A button that navigates from the welcome screen to the home
"welcome.continue" = "Continue";

/// MARK: - Event

// A button that starts playback of the livestream for a given event
"event.livestream" = "Play livestream";
// A button that starts playback of a video that the user has not seen yet
...
